# cfprefsmon

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml  python-publish.yml
cfprefsmon/: __main__.py
