[project]
name = "cfprefsmon"
version = "1.0.0"
description = "Search for interesting internal preferences inside a connected iDevice"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
keywords = ["ios", "cli", "preferences", "cfprefsd", "monitor"]
authors = [
    { name = "doronz88", email = "doron88@gmail.com" }
]
maintainers = [
    { name = "doronz88", email = "doron88@gmail.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]
dynamic = ["dependencies"]

[project.optional-dependencies]
test = ["pytest", "cmd2_ext_test"]

[project.urls]
"Homepage" = "https://github.com/doronz88/cfprefsmon"
"Bug Reports" = "https://github.com/doronz88/cfprefsmon/issues"

[project.scripts]
cfprefsmon = "cfprefsmon.__main__:cli"

[tool.setuptools.packages.find]
exclude = ["docs*", "tests*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
